# His_django_ragflow

./: .env  db.sqlite3  docker-compose.yml  main.py  manage.py  pyproject.toml
backend/: .env  api.py  check_paths.py  debug_env.py  debug_ragflow.py  main.py  scan_9380.py  services.py
backend/apps/rag_engine/: apps.py  client.py
backend/apps/rag_engine/management/commands/: test_ragflow.py
backend/apps/user_auth/: api.py  apps.py  jwt.py
backend/apps/users/: apps.py  models.py
backend/apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
